# renamer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
src/: args.rs  errors.rs  file_renamer.rs  lib.rs  main.rs  term_utils.rs
tests/: increment.rs  opts.rs  patterns.rs
