[package]
name = "renamer"
version = "0.1.2"
authors = ["Adrian Göransson"]
edition = "2018"
description = "A command line tool to rename multiple files at once."
license = "MIT"
repository = "https://github.com/adriangoransson/renamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
structopt = "0.3.15"
